fix the visiblility bug after feedClosr button

--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -125,3 +125,7 @@
     left: -75px;
     top: 10px;
 }
+
+/* .feedback__phone{
+    margin-left: -10px;
+} */
