--- a/src/styles/style1.4.css
+++ b/src/styles/style1.4.css
@@ -152,6 +152,11 @@ div.upperMenu1-4 img{
     display: none;
     visibility: hidden;
 }
+
+.ghostSidebar{
+    display: none;
+    visibility: hidden;
+}
 /*feedback*/
 .feedback__container{
     display: none;
@@ -159,7 +164,7 @@ div.upperMenu1-4 img{
 }
 .feedback__container{
     margin: 0;
-    border-color: 2px solid blue;
+    border-color: 2px solid #fff;
     background-color: #fff;
     height: 100vh;
     position: fixed;
@@ -180,15 +185,19 @@ div.upperMenu1-4 img{
 
 }
 .feedback__form{
+    box-sizing: border-box;
+    display: block;
     border-radius: 5px;
     margin-bottom: 10px;
     padding: 10px;
     width: 90%;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-right: 10px;
 }
 
-.feedback__name{
-    margin-left: -10px;
-}
+
+
 
 .feedback__disclaimer{
     font-size: small;
